--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -391,6 +391,7 @@
   .tab-header{
     margin: 10px 0px;
     text-align: center;
+    font-size: 0.98rem;
   }
   .profile-header{
     padding: 15px;
